# markov

./: .gitignore  LICENSE  NOTES.md  README.md  default.nix  markov-processes.cabal  markov.cabal
examples/: markov-examples.cabal
examples/Example/: Clinic.lhs  Doctor.lhs
nix/assertions/: default.nix
nix/memoize/: default.nix
nix/set-monad/: default.nix
src/AI/Markov/: HMM.lhs  HOMM.lhs  MM.lhs
src/Data/: Distribution.lhs
src/Data/Function/: Extras.lhs
src/Data/Functor/: Extras.hs
src/Data/List/: Extras.lhs
src/Data/Set/: Extras.lhs
src/System/Random/: Extras.lhs
test/: Main.lhs
