name:                markov
version:             0.0.0
license-file:        LICENSE
synopsis:            Hidden Markov processes.
author:              Leopold Tal G <leopold.tal.dg@gmail.com>, Vikram Verma <me@vikramverma.com>
maintainer:          Vikram Verma <me@vikramverma.com>
category:            AI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: 
    AI.Markov.HMM,
    Data.Distribution
  other-modules:
    System.Random.Extras
  other-extensions:
    RecordWildCards
  hs-source-dirs: 
    src
  build-depends:        
    base,
    random,
    MonadRandom
  default-language: 
    Haskell2010
