name:                markov
version:             0.0.0
license-file:        LICENSE
synopsis:            Hidden Markov processes.
author:              Leopold Tal G <leopold.tal.dg@gmail.com>, Vikram Verma <me@vikramverma.com>
maintainer:          Vikram Verma <me@vikramverma.com>
category:            AI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: 
    AI.Markov.HMM,
    Data.Distribution
  other-modules:
    Data.Functor.Extras,
    Data.List.Extras,
    System.Random.Extras
  other-extensions:
    GeneralizedNewtypeDeriving,
    RecordWildCards,
    TemplateHaskell,
    ViewPatterns
  hs-source-dirs: 
    src
  build-depends:        
    base,
    bifunctors,
    memoize,
    MonadRandom,
    random
  default-language: 
    Haskell2010
