name:                markov-examples
version:             0.0.0
license-file:        ../LICENSE
synopsis:            Examples for the Markov library.
author:              Leopold Tal G <leopold.tal.dg@gmail.com>, Vikram Verma <me@vikramverma.com>
maintainer:          Vikram Verma <me@vikramverma.com>
category:            AI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: 
    Example.Clinic
  other-extensions:
    LambdaCase
  build-depends:        
    base,
    markov,
    random
  default-language: 
    Haskell2010
