name:                markov-examples
version:             0.0.1
license-file:        ../LICENSE
synopsis:            Examples for the Markov library.
author:              Leopold Tal G <leopold.tal.dg@gmail.com>, Yorick van Pelt <yorickvanpelt@gmail.com>, Vikram Verma <me@vikramverma.com>
maintainer:          Vikram Verma <me@vikramverma.com>
category:            AI
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: 
    Example.Doctor
  other-extensions:
    GeneralizedNewtypeDeriving,
    LambdaCase,
    TemplateHaskell
  build-depends:        
    base,
    markov-processes,
    memoize,
    random
  default-language: 
    Haskell2010
